--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
           </div>
       </div>
     </div>
-    <footer>created by <a href="">devalade</a> - <a href="">devChallenges.io</a> </footer>
+    <footer>created by <a href="https://github.com/devalade">devalade</a> - <a href="https://twitter.com/dev_alade">devChallenges.io</a> </footer>
   </body>
 </html>
